<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/iv_list_empty"
            android:layout_width="@dimen/dim_iv_list_empty"
            android:layout_height="@dimen/dim_iv_list_empty"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_empty_list"/>

    <TextView
            android:id="@+id/tv_list_empty"
            android:layout_width="@dimen/dim_tv_list_empty"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8dp"
            android:gravity="center"
            android:text="@string/tv_list_empty"
            android:fontFamily="@font/century_gothic_regular"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:includeFontPadding="false"/>

</LinearLayout>