<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/list_history"
            style="@style/AppTheme.RecycleView"/>

    <include
            layout="@layout/content_list_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="280dp"/>

    <ProgressBar
            android:id="@+id/pb_search"
            style="@style/AppTheme.ProgressBar"/>

</FrameLayout>