<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
                android:id="@+id/layout_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:background="@drawable/shape_item_search">

                <EditText
                        android:id="@+id/et_search"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.7"
                        android:layout_marginEnd="8dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:hint="@string/et_search_hint"
                        android:fontFamily="@font/century_gothic_regular"
                        android:textColor="@color/color_black_transparent_70"
                        android:textColorHint="@color/color_black_transparent_70"
                        android:textSize="14sp"
                        android:includeFontPadding="false"
                        android:background="@drawable/shape_edit_text_search"/>

                <Button
                        android:id="@+id/btn_search"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.3"
                        android:layout_gravity="center"
                        android:text="@string/find"
                        android:fontFamily="@font/courier_new_regular"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textAllCaps="false"
                        android:includeFontPadding="false"
                        android:background="@drawable/selector_button_search"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:layout_marginBottom="-38dp"
                android:layout_marginStart="16dp"
                android:layout_above="@+id/layout_search"
                android:layout_alignStart="@id/layout_search"
                app:cardCornerRadius="3dp"
                app:cardBackgroundColor="@null">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/search"
                    android:fontFamily="@font/century_gothic_regular"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:includeFontPadding="false"
                    android:background="@drawable/shape_title_search"/>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/list_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:background="@drawable/shape_gradient_main"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

        <android.support.v7.widget.CardView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:layout_marginBottom="-30dp"
                android:layout_marginStart="24dp"
                android:layout_above="@+id/list_tags"
                android:layout_alignStart="@id/list_tags"
                app:cardCornerRadius="3dp"
                app:cardBackgroundColor="@null">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tags"
                    android:fontFamily="@font/century_gothic_regular"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:includeFontPadding="false"
                    android:background="@drawable/shape_title_search"/>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/button_background_passive"/>

        <android.support.v7.widget.CardView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="24dp"
                app:cardCornerRadius="3dp"
                app:cardBackgroundColor="@null">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/history"
                    android:fontFamily="@font/century_gothic_regular"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:includeFontPadding="false"
                    android:background="@drawable/shape_title_search"/>

        </android.support.v7.widget.CardView>

    </FrameLayout>

</LinearLayout>