<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <WebView
            android:id="@+id/web_view_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </WebView>

    <ProgressBar
            android:id="@+id/pb_details"
            style="@style/AppTheme.ProgressBar"/>

</FrameLayout>