<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/list_articles"
            style="@style/AppTheme.RecycleView"
            android:paddingStart="5dp"
            app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"
            app:spanCount="2"/>

    <ProgressBar
            android:id="@+id/pb_search_result"
            style="@style/AppTheme.ProgressBar"/>

</FrameLayout>